Improved and created the design of the website introduction page.

--- a/Frontend/src/app/shared/components/navbar/navbar.component.html
+++ b/Frontend/src/app/shared/components/navbar/navbar.component.html
@@ -8,6 +8,7 @@
     <div class="navbar navbar-public">
         <a class="nav" [routerLink]="[path.home]">Home</a>
         <a class="nav" [routerLink]="[path.member]">Member</a>
+        <a class="nav" [routerLink]="[path.aboutwebsite]">About</a>
         <a class="nav" [routerLink]="[path.register]">Register</a>
         <a class="nav" [routerLink]="[path.login]">Login</a>
     </div>
