Improved the design of the Resendverification page.

--- a/Frontend/src/app/pages/public/home/home.component.html
+++ b/Frontend/src/app/pages/public/home/home.component.html
@@ -60,7 +60,7 @@
             有上進心
         </p>
         <p>
-            性別不拘(學妹為佳)
+            性別不拘
         </p>
     </div>
     <div class="box">
