Created and improved the design of the post-wall page.

--- a/Frontend/src/app/shared/components/navbar/navbar.component.html
+++ b/Frontend/src/app/shared/components/navbar/navbar.component.html
@@ -8,7 +8,7 @@
     <div class="navbar navbar-public">
         <a class="nav" [routerLink]="[path.home]">Home</a>
         <a class="nav" [routerLink]="[path.member]">Member</a>
-        <a class="nav" [routerLink]="[path.aboutwebsite]">About</a>
+        <a class="nav" [routerLink]="[path.aboutwebsite]">About-Page</a>
         <a class="nav" [routerLink]="[path.register]">Register</a>
         <a class="nav" [routerLink]="[path.login]">Login</a>
     </div>
@@ -16,6 +16,7 @@
     <div class="navbar navbar-private" *ngIf="isLoggedIn()">
         <a class="nav-private" [routerLink]="[path.square]">Square</a>
         <a class="nav-private" [routerLink]="[path.friend]">Friend</a>
+        <a class="nav-private" [routerLink]="[path.post]">Post-wall</a>
         <a class="nav-private" [routerLink]="[path.todo]">Todo</a>
         <a class="nav-private" [routerLink]="[path.setting]">Setting</a>
         <a class="nav-private" [routerLink]="[path.profile]">Profile</a>
